[tool.poetry]
name = "translatables"
version = "0.1.0"
description = ""
authors = ["Tran Long Chau <chau.tran@tuni.fi>"]

[tool.poetry.dependencies]
python = ">=3.7.1"
jupyterlab = "^3.0.7"
nltk = "^3.5"
pandas = "^1.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
